# dofus-dmg-calculator

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  bootstrap.sh  release-new-version.sh  rustfmt.toml
.github/workflows/: notify.yml  release.yml
benches/: bin_benchmark.rs  lib_benchmark.rs
src/: api.rs  impls.rs  lib.rs  main.rs
tests/: integration_tests.rs
