[package]
name = "dofus-dmg-calculator"
version = "1.0.4"
edition = "2024"
description = "Compute the estimated damages your Dofus spell may inflict"
authors = ["Patacode <pata.codegineer@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Patacode/dofus-dmg-calculator"
keywords = ["dofus", "damage", "calculator", "utility", "spell"]
categories = ["games", "command-line-utilities"]

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }

[package.metadata.release]
pre-release-commit-message = "chore: prepare for release v{{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
pre-release-hook = ["./release-new-version.sh"]
