[package]
name = "dofus-dmg-calculator"
version = "1.0.5"
edition = "2024"
description = "Compute the estimated damages your Dofus spell may inflict"
authors = ["Patacode <pata.codegineer@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Patacode/dofus-dmg-calculator"
documentation = "https://docs.rs/crate/dofus-dmg-calculator"
keywords = ["dofus", "damage", "calculator", "utility", "spell"]
categories = ["games", "command-line-utilities"]

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }

[package.metadata.release]
pre-release-commit-message = "chore: prepare for release v{{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
pre-release-replacements = [
  {file="README.md", search="\\d\\.\\d\\.\\d", replace="{{version}}"},
  {file="CHANGELOG.md", search="@Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="@ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="@PlannedForNextRelease", replace="@PlannedForNextRelease\n## [@Unreleased] - @ReleaseDate\n"},
]
